--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+@font-face {
+  font-family: 'Poppins-Regular';
+  src: local('Poppins'), url(./Assets/Fonts/Poppins-Regular.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Poppins-Medium';
+  src: local('Poppins'), url(./Assets/Fonts/Poppins-Medium.ttf) format('truetype');
+}
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
